--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server/server.js"
+    "server": "node server.js",
+    "dev": "'concurrently \"npm run server\" \"npm start\"'"
   },
   "eslintConfig": {
     "extends": [
