--- a/package.json
+++ b/package.json
@@ -29,14 +29,12 @@
     "turndown": "^7.2.0",
     "winston": "^3.17.0"
   },
-  "scripts": {
-    "server": "node --no-deprecation server.js",
-    "start": "craco start",
-    "dev": "concurrently \"yarn server\" \"yarn start\"",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
-  },
+"scripts": {
+  "server": "nodemon --no-deprecation server.js",
+  "start": "craco start",
+  "build": "craco build",
+  "dev": "concurrently \"yarn server\" \"yarn start\""
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -72,7 +70,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.7",
     "typescript": "^5.6.3",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
