--- a/package.json
+++ b/package.json
@@ -23,22 +23,23 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
+    "session-file-store": "^1.5.0",
     "showdown": "^2.1.0",
     "tailwindcss": "^3.4.15",
     "turndown": "^7.2.0",
     "winston": "^3.17.0"
   },
-    "scripts": {
-      "server": "nodemon --no-deprecation server.js",
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "dev": "concurrently \"yarn server\" \"yarn start\"",
-      "prod": "yarn build && node server.js",
-      "serve-prod": "NODE_ENV=production node server.js"
-    },
+  "scripts": {
+    "server": "nodemon --no-deprecation server.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "dev": "concurrently \"yarn server\" \"yarn start\"",
+    "prod": "yarn build && node server.js",
+    "serve-prod": "NODE_ENV=production node server.js"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
