--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "server": "nodemon --no-deprecation server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "dev": "concurrently \"yarn server\" \"yarn start\"",
+    "dev": "concurrently \"PORT=5000 yarn server\" \"PORT=3020 yarn start\"",
     "prod": "yarn build && node server.js",
     "serve-prod": "NODE_ENV=production node server.js"
   },
