--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,22 @@
-REACT_APP_GITHUB_CLIENT_ID=your_github_client_id
-REACT_APP_GITHUB_CLIENT_SECRET=your_github_client_secret
+# GitHub OAuth Configuration
+GITHUB_CLIENT_ID=your_github_client_id_here
+GITHUB_CLIENT_SECRET=your_github_client_secret_here
+REDIRECT_URI=http://localhost:3020/callback
+
+# Server Configuration
+PORT=5000
+NODE_ENV=development
+FRONTEND_URL=http://localhost:3020
+
+# Session Security
+SESSION_SECRET=your_super_secure_random_string_here
+
+# React App Environment Variables
+REACT_APP_GITHUB_CLIENT_ID=your_github_client_id_here
+REACT_APP_REDIRECT_URI=http://localhost:3020/callback
 REACT_APP_BACKEND_URL=http://localhost:5000
+
+# Optional: Production URLs
+# FRONTEND_URL=https://your-domain.com
+# REDIRECT_URI=https://your-domain.com/callback
+# REACT_APP_BACKEND_URL=https://your-domain.com
