--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gist-manager",
   "version": "0.5.0",
+  "type": "module",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -33,21 +33,45 @@
     "turndown": "^7.2.0",
     "winston": "^3.17.0"
   },
-"scripts": {
-  "server":     "nodemon --no-deprecation server.js",
-  "start":      "react-scripts start",
-  "build":      "react-scripts build",
-  "dev":        "concurrently \"PORT=5000 yarn server\" \"PORT=3020 yarn start\"",
-  "clean":      "rm -rf build dist node_modules",
-  "rebuild":    "yarn clean && yarn install && yarn build",
-  "prod":       "yarn rebuild && node server.js",
-  "serve-prod": "NODE_ENV=production node server.js"
-},
+  "scripts": {
+    "server": "nodemon --no-deprecation --experimental-modules server.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "dev": "concurrently \"PORT=5000 yarn server\" \"PORT=3020 yarn start\"",
+    "clean": "rm -rf build dist node_modules",
+    "rebuild": "yarn clean && yarn install && yarn build",
+    "prod": "yarn rebuild && NODE_ENV=production node server.js",
+    "serve-prod": "NODE_ENV=production node server.js",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "env": {
+      "es2022": true,
+      "node": true,
+      "browser": true
+    },
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "rules": {
+      "import/no-anonymous-default-export": "off",
+      "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+      "no-console": "off"
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    }
   },
   "browserslist": {
     "production": [
@@ -72,27 +96,8 @@
     "@craco/craco": "^7.1.0",
     "@testing-library/dom": "^10.4.0",
     "@types/react": "^18.3.12",
-    "assert": "^2.1.0",
-    "babel-loader": "^9.2.1",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
     "concurrently": "^9.1.0",
-    "crypto-browserify": "^3.12.1",
-    "css-loader": "^7.1.2",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.3",
-    "https-browserify": "^1.0.0",
-    "mini-css-extract-plugin": "^2.9.2",
-    "nodemon": "^3.1.7",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "typescript": "^5.6.3",
-    "util": "^0.12.5",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
-  }
+    "nodemon": "^3.1.7"
+  },
+  "proxy": "http://localhost:5000"
 }
