--- a/package.json
+++ b/package.json
@@ -1,103 +1,18 @@
 {
   "name": "gist-manager",
   "version": "0.5.0",
-  "type": "module",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^22.9.0",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.7.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.1",
-    "express-session": "^1.18.1",
-    "helmet": "^8.0.0",
-    "marked": "^14.1.2",
-    "morgan": "^1.10.0",
-    "node-cache": "^5.1.2",
-    "postcss": "^8.4.49",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
-    "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.28.0",
-    "react-scripts": "^5.0.1",
-    "react-syntax-highlighter": "^15.6.1",
-    "remark-gfm": "^4.0.1",
-    "session-file-store": "^1.5.0",
-    "showdown": "^2.1.0",
-    "tailwindcss": "^3.4.15",
-    "turndown": "^7.2.0",
-    "winston": "^3.17.0"
-  },
   "scripts": {
-    "server": "nodemon --no-deprecation --experimental-modules server.js",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "dev": "concurrently \"PORT=5000 yarn server\" \"PORT=3020 yarn start\"",
-    "clean": "rm -rf build dist node_modules",
-    "rebuild": "yarn clean && yarn install && yarn build",
-    "prod": "yarn rebuild && NODE_ENV=production node server.js",
-    "serve-prod": "NODE_ENV=production node server.js",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "env": {
-      "es2022": true,
-      "node": true,
-      "browser": true
-    },
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "rules": {
-      "import/no-anonymous-default-export": "off",
-      "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-      "no-console": "off"
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    }
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "server": "cd server && yarn start",
+    "client": "cd client && yarn start", 
+    "build": "cd client && yarn build && cp -r client/build server/",
+    "dev": "concurrently \"cd server && yarn start\" \"cd client && yarn start\"",
+    "clean": "rm -rf client/build client/dist client/node_modules server/node_modules node_modules server/build",
+    "install-all": "yarn install && cd client && yarn install && cd ../server && yarn install",
+    "rebuild": "yarn clean && yarn install-all && yarn build",
+    "prod": "yarn rebuild && cd server && yarn serve-prod"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-syntax-flow": "^7.26.0",
-    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
-    "@craco/craco": "^7.1.0",
-    "@testing-library/dom": "^10.4.0",
-    "@types/react": "^18.3.12",
-    "concurrently": "^9.1.0",
-    "nodemon": "^3.1.7"
-  },
-  "proxy": "http://localhost:5000"
+    "concurrently": "^9.1.0"
+  }
 }
