--- a/client/package.json
+++ b/client/package.json
@@ -24,11 +24,18 @@
     "turndown": "^7.2.0"
   },
   "scripts": {
+    "server": "nodemon --no-deprecation server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "cp -r build server/ 2>/dev/null || true",
+    "dev": "concurrently \"PORT=5000 yarn server\" \"PORT=3020 yarn start\"",
+    "clean": "rm -rf build dist node_modules server/build",
+    "rebuild": "yarn clean && yarn install && yarn build",
+    "prod": "yarn rebuild && NODE_ENV=production node server.js",
+    "serve-prod": "NODE_ENV=production node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+},
   "eslintConfig": {
     "extends": [
       "react-app",
