--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gist-manager-client",
-  "version": "0.5.0",
+  "version": "0.9.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,18 +24,13 @@
     "turndown": "^7.2.0"
   },
   "scripts": {
-    "server": "nodemon --no-deprecation server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "cp -r build server/ 2>/dev/null || true",
-    "dev": "concurrently \"PORT=5000 yarn server\" \"PORT=3020 yarn start\"",
-    "clean": "rm -rf build dist node_modules server/build",
-    "rebuild": "yarn clean && yarn install && yarn build",
-    "prod": "yarn rebuild && NODE_ENV=production node server.js",
-    "serve-prod": "NODE_ENV=production node server.js",
+    "postbuild": "cp -r build ../server/ 2>/dev/null || true",
+    "clean": "rm -rf build dist node_modules ../server/build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-},
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -63,6 +58,5 @@
     "@babel/core": "^7.26.0",
     "@craco/craco": "^7.1.0",
     "@types/react": "^18.3.12"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
