--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postinstall": "echo 'Dependencies installed successfully'",
     "dev": "concurrently \"yarn workspace gist-manager-server start\" \"yarn workspace gist-manager-client start\"",
     "build": "yarn workspace gist-manager-client build",
-    "build:prod": "yarn build && yarn workspace gist-manager-client run postbuild",
+    "build:prod": "cd client && REACT_APP_BACKEND_URL='' REACT_APP_GITHUB_CLIENT_ID='Ov23liVkfikmxcZ001wO' REACT_APP_REDIRECT_URI='https://gistmd.basementnodes.ca/callback' yarn build && yarn postbuild",
     "serve:prod": "yarn workspace gist-manager-server run serve-prod",
     "start:server": "yarn workspace gist-manager-server start",
     "start:client": "yarn workspace gist-manager-client start",
