--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,15 @@ node_modules/
 # Production build
 /build
 /dist
+client/build/
+server/build/
 
 # Environment variables
 .env
+.env.*
 .env.local
+.env.development
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
@@ -98,6 +103,15 @@ jspm_packages/
 # Application data
 /data
 /sessions
+
+# Deployment scripts and docs
+DEPLOYMENT.md
+build-production.sh
+check-production.sh
+debug-oauth.md
+deploy.sh
+quick-deploy.sh
+*-deploy.sh
 
 # ESM cache
 .esm-cache/
