--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,6 @@
   "version": "0.9.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^22.9.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "postcss": "^8.4.49",
@@ -54,8 +50,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@craco/craco": "^7.1.0",
-    "@types/react": "^18.3.12"
+    "@babel/core": "^7.26.0"
   }
 }
