--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,12 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-emoji": "^5.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "showdown": "^2.1.0",
     "tailwindcss": "^3.4.15",
     "turndown": "^7.2.0"
@@ -33,8 +38,21 @@
     ],
     "rules": {
       "import/no-anonymous-default-export": "off",
-      "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-      "no-console": ["warn", { "allow": ["error", "warn"] }]
+      "no-unused-vars": [
+        "warn",
+        {
+          "argsIgnorePattern": "^_"
+        }
+      ],
+      "no-console": [
+        "warn",
+        {
+          "allow": [
+            "error",
+            "warn"
+          ]
+        }
+      ]
     }
   },
   "browserslist": {
