--- a/client/package.json
+++ b/client/package.json
@@ -84,12 +84,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/ui": "^4.0.10",
     "jsdom": "^27.2.0",
+    "vite": "^7.2.2",
     "vitest": "^4.0.10"
   }
 }
