Simplify to client-side PKCE OAuth flow
- Remove server-side auth controllers and routes
- Replace server.js with minimal token proxy (index.js)
- Client now uses direct GitHub API for all gist operations
- Remove shared gists feature (unused)
- Simplify API config to use relative URLs

--- a/client/package.json
+++ b/client/package.json
@@ -39,8 +39,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "cp -r build ../server/ 2>/dev/null || true",
-    "clean": "rm -rf build dist node_modules ../server/build",
+    "clean": "rm -rf build dist node_modules",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
