--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "gist-manager",
-  "version": "0.5.0",
-  "private": true,
-  "packageManager": "yarn@1.22.19",
-  "workspaces": [
-    "client",
-    "server"
-  ],
-  "scripts": {
-    "install:all": "yarn install",
-    "postinstall": "echo 'Dependencies installed successfully'",
-    "dev": "concurrently \"yarn workspace gist-manager-server start\" \"yarn workspace gist-manager-client start\"",
-    "build": "yarn workspace gist-manager-client build",
-    "build:prod": "cd client && REACT_APP_BACKEND_URL='' REACT_APP_GITHUB_CLIENT_ID='Ov23liVkfikmxcZ001wO' REACT_APP_REDIRECT_URI='https://gistmd.basementnodes.ca/callback' yarn build && yarn postbuild",
-    "serve:prod": "yarn workspace gist-manager-server run serve-prod",
-    "start:server": "yarn workspace gist-manager-server start",
-    "start:client": "yarn workspace gist-manager-client start",
-    "start": "yarn dev",
-    "clean": "yarn workspace gist-manager-client run clean && rm -rf node_modules */node_modules",
-    "test": "yarn workspace gist-manager-client test",
-    "deploy": "yarn build:prod && yarn serve:prod"
-  },
-  "devDependencies": {
-    "concurrently": "^9.2.0"
-  }
+	"name": "gist-manager",
+	"version": "1.0.0",
+	"private": true,
+	"packageManager": "yarn@1.22.19",
+	"workspaces": [
+		"client",
+		"server"
+	],
+	"scripts": {
+		"install:all": "yarn install",
+		"dev": "concurrently \"yarn workspace gist-manager-server start\" \"yarn workspace gist-manager-client start\"",
+		"build": "yarn workspace gist-manager-client build && cp -r client/build server/",
+		"start": "yarn workspace gist-manager-server start",
+		"clean": "yarn workspace gist-manager-client run clean && rm -rf node_modules server/build",
+		"test": "yarn workspace gist-manager-client test"
+	},
+	"devDependencies": {
+		"concurrently": "^9.2.0"
+	}
 }
