--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,13 @@
 {
-  "name": "gist-manager-server",
-  "version": "0.9.0",
-  "private": true,
-  "main": "server.js",
-  "dependencies": {
-    "axios": "^1.7.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.1",
-    "express-session": "^1.18.1",
-    "helmet": "^8.0.0",
-    "morgan": "^1.10.0",
-    "node-cache": "^5.1.2",
-    "session-file-store": "^1.5.0",
-    "winston": "^3.17.0"
-  },
-  "scripts": {
-    "start": "nodemon --no-deprecation server.js",
-    "serve-prod": "NODE_ENV=production node server.js"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+	"name": "gist-manager-server",
+	"version": "1.0.0",
+	"private": true,
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js"
+	},
+	"dependencies": {
+		"cors": "^2.8.5",
+		"express": "^4.21.0"
+	}
 }
