--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,13 @@
-# GitHub OAuth Configuration
+# Server Environment Variables
+# Copy this file to .env and fill in your values
+
+# GitHub OAuth Configuration (for token exchange proxy)
 GITHUB_CLIENT_ID=your_github_client_id_here
 GITHUB_CLIENT_SECRET=your_github_client_secret_here
-REDIRECT_URI=http://localhost:3020/callback
 
 # Server Configuration
 PORT=5000
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3020
 
-# Session Security
-SESSION_SECRET=your_super_secure_random_string_here
-
-# React App Environment Variables
-REACT_APP_GITHUB_CLIENT_ID=your_github_client_id_here
-REACT_APP_REDIRECT_URI=http://localhost:3020/callback
-REACT_APP_BACKEND_URL=http://localhost:5000
-
-# Optional: Production URLs
-# FRONTEND_URL=https://your-domain.com
-# REDIRECT_URI=https://your-domain.com/callback
-# REACT_APP_BACKEND_URL=https://your-domain.com
+# NOTE: Client environment variables must be in client/.env
+# See client/.env.example for required client configuration
