--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,11 @@ server/build/
 
 # Environment variables
 .env
-.env.*
 .env.local
 .env.development
 .env.production
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
+!.env.example
 
 # Logs
 npm-debug.log*
